--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </div>
         <div id="center">
             <div class="boxL">
-                <img src="img/01image.pNg" alt="image" width="100%">
+                <img src="img/01image.png" alt="image" width="100%">
             </div>
             <div class="boxR">
                 <h2 style="text-align: center;">Šlep služba BT LOGISTIC</h2>
